<resources>
    <string name="app_name">Clubo</string>


    <string name="title_activity_match">MatchActivity</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="search">Cari</string>
    <string name="title_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialogexit">Are you sure?</string>
    <string name="Yes">Yes</string>
...
